--- a/src/assets/css/globe.css
+++ b/src/assets/css/globe.css
@@ -14,6 +14,22 @@ a {
   margin-top: 20px;
 }
 
+.el-tabs__active-bar {
+  background-color: red !important;
+}
+
+.el-tabs__item {
+  color: #303133 !important;
+}
+
+.is-active {
+  color: red !important;
+}
+
+.el-divider--horizontal {
+  margin: 15px 0 !important;
+}
+
 /* 阴影盒样式 */
 .globe-shadow-box {
   display: flex;
