--- a/src/assets/css/globe.css
+++ b/src/assets/css/globe.css
@@ -30,6 +30,21 @@ a {
   margin: 15px 0 !important;
 }
 
+.el-header {
+  padding: 0 !important;
+}
+
+.el-menu--horizontal>.el-menu-item.is-active {
+  border-bottom: none !important;
+}
+
+/* APlayer 样式 */
+/* .aplayer-pic {
+  width: 120px !important;
+  height: 120px !important;
+} */
+
+
 /* 阴影盒样式 */
 .globe-shadow-box {
   display: flex;
